| Bug #28593 | cluster backup scans in acc index order, bad for disk data | ||
|---|---|---|---|
| Submitted: | 22 May 2007 13:48 | Modified: | 23 May 2007 15:53 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S1 (Critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[22 May 2007 13:48]
Tomas Ulin
[22 May 2007 15:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27139 ChangeSet@1.2469, 2007-05-22 17:53:07+02:00, tomas@whalegate.ndb.mysql.com +5 -0 Bug #28593 cluster backup scans in acc index order, bad for disk data - change to scan in tup and disk order (if applicable)
[23 May 2007 8:24]
Bugs System
Pushed into 5.1.19-beta
[23 May 2007 15:53]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
No user-visible changes apparent, closed without further action.
